--- a/app/src/main/res/layout/dialog_edit_day_add_class.xml
+++ b/app/src/main/res/layout/dialog_edit_day_add_class.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
+    android:layout_marginLeft="15.5dp"
     android:layout_marginTop="16dp">
 
     <Spinner
@@ -25,7 +25,7 @@
         android:layout_below="@id/dialog_edit_day_add_class_spinner"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
-        android:text="Start time:"
+        android:text="Class start time:"
         android:textColor="#000000"
         android:textSize="15sp" />
 
@@ -49,7 +49,7 @@
         android:layout_below="@id/dialog_edit_day_add_class_start_time_label"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
-        android:text="End time:"
+        android:text="Class end time:"
         android:textColor="#000000"
         android:textSize="15sp" />
 
