--- a/app/src/main/res/layout/view_notification.xml
+++ b/app/src/main/res/layout/view_notification.xml
@@ -16,14 +16,123 @@
 
         <ProgressBar
 
-            android:id="@+id/view_notification_progress_bar"
+            android:id="@+id/view_notification_progress_bar_pink"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:background="@drawable/circular_progress_bar_background"
             android:indeterminate="false"
-            android:progressDrawable="@drawable/circular_progress_bar" />
+            android:progressDrawable="@drawable/circular_progress_bar_pink"
+            android:visibility="gone" />
+
+        <ProgressBar
+
+            android:id="@+id/view_notification_progress_bar_red"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_progress_bar_background"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar_red"
+            android:visibility="gone" />
+
+        <ProgressBar
+
+            android:id="@+id/view_notification_progress_bar_orange"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_progress_bar_background"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar_orange"
+            android:visibility="gone" />
+
+        <ProgressBar
+
+            android:id="@+id/view_notification_progress_bar_yellow"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_progress_bar_background"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar_yellow"
+            android:visibility="gone" />
+
+        <ProgressBar
+
+            android:id="@+id/view_notification_progress_bar_green"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_progress_bar_background"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar_green"
+            android:visibility="gone" />
+
+        <ProgressBar
+
+            android:id="@+id/view_notification_progress_bar_blue"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_progress_bar_background"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar_blue"
+            android:visibility="gone" />
+
+        <ProgressBar
+
+            android:id="@+id/view_notification_progress_bar_violet"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_progress_bar_background"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar_violet"
+            android:visibility="gone" />
+
+        <ProgressBar
+
+            android:id="@+id/view_notification_progress_bar_magenta"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_progress_bar_background"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar_magenta"
+            android:visibility="gone" />
+
+        <ProgressBar
+
+            android:id="@+id/view_notification_progress_bar_grey"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_progress_bar_background"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar_grey"
+            android:visibility="gone" />
+
+        <ProgressBar
+
+            android:id="@+id/view_notification_progress_bar_black"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_progress_bar_background"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar_black"
+            android:visibility="gone" />
 
         <TextView
 
@@ -59,7 +168,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/view_notification_header"
-            android:textColor="#757575"
+            android:textColor="#616161"
             android:textSize="14sp" />
 
     </RelativeLayout>
@@ -73,9 +182,7 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="8dp"
         android:background="#00000000"
-        android:backgroundTint="@color/primary"
         android:clickable="true"
-        android:foregroundTint="@color/primary"
         android:src="@drawable/homework"
         android:tint="@color/primary" />
 
