--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -24,19 +24,19 @@
 
     </string-array>
 
-    <array name="rainbow">
+    <array name="add_class_colors">
 
-        <item>@color/bright_pink</item>
+        <item>@color/pink</item>
         <item>@color/red</item>
         <item>@color/orange</item>
         <item>@color/yellow</item>
         <item>@color/green</item>
-        <item>@color/cyan</item>
-        <item>@color/azure</item>
         <item>@color/blue</item>
         <item>@color/violet</item>
         <item>@color/magenta</item>
-
+        <item>@color/grey</item>
+        <item>@color/black</item>
+        s
     </array>
 
 </resources>
