--- a/app/src/main/res/xml/preferences_add_class.xml
+++ b/app/src/main/res/xml/preferences_add_class.xml
@@ -7,11 +7,11 @@
 
     <org.xdty.preference.ColorPreference
 
-        android:defaultValue="@color/flamingo"
+        android:defaultValue="@color/green"
         android:key="add_class_color"
         android:summary="This color will be associated with your class"
         android:title="Choose a color"
-        tools:colors="@array/rainbow"
+        tools:colors="@array/add_class_colors"
         tools:columns="5"
         tools:dialogTitle="Choose a color" />
 
