--- a/app/src/main/res/xml/preferences_add_class.xml
+++ b/app/src/main/res/xml/preferences_add_class.xml
@@ -9,7 +9,7 @@
 
         android:defaultValue="@color/green"
         android:key="add_class_color"
-        android:summary="This color will be associated with your class"
+        android:summary="This color will show up on notifications about this class"
         android:title="Choose a color"
         tools:colors="@array/add_class_colors"
         tools:columns="5"
