--- a/app/src/main/res/layout/fragment_classes.xml
+++ b/app/src/main/res/layout/fragment_classes.xml
@@ -13,8 +13,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusableInTouchMode="true"
+        android:orientation="vertical"
         android:paddingBottom="12dp"
         android:paddingTop="12dp">
+
+        <android.support.v7.widget.CardView
+
+            android:id="@+id/classes_no_classes_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
+            android:visibility="gone">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="No classes to show."
+                android:textSize="15sp" />
+
+        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.RecyclerView
 
