--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -89,7 +89,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="1dp"
                         android:layout_marginRight="1dp"
-                        android:progressTint="#FFFFFF">
+                        android:progressTint="@color/primary">
 
                     </ProgressBar>
 
