--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -31,6 +31,7 @@
         <CheckBoxPreference
 
             android:defaultValue="false"
+            android:dependency="detailed_notification"
             android:key="flip_colors"
             android:summary="This sets the class color as the notification background"
             android:title="Flip notification colors" />
