--- a/app/src/main/res/layout/view_notification.xml
+++ b/app/src/main/res/layout/view_notification.xml
@@ -173,16 +173,20 @@
 
         android:layout_width="wrap_content"
         android:layout_height="54dp"
+        android:layout_alignRight="@+id/view_notification_button"
         android:layout_centerVertical="true"
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@id/view_notification_progress_layout"
+        android:paddingRight="64dp"
         android:paddingTop="6dp">
 
         <TextView
 
             android:id="@+id/view_notification_header"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="#000000"
             android:textSize="16sp"
             android:visibility="gone" />
@@ -190,8 +194,10 @@
         <TextView
 
             android:id="@+id/view_notification_header_white"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:visibility="gone" />
@@ -199,9 +205,11 @@
         <TextView
 
             android:id="@+id/view_notification_text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/view_notification_header"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="#616161"
             android:textSize="14sp"
             android:visibility="gone" />
@@ -209,9 +217,11 @@
         <TextView
 
             android:id="@+id/view_notification_text_white"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/view_notification_header_white"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="#d0ffffff"
             android:textSize="14sp"
             android:visibility="gone" />
