--- a/app/src/main/res/layout/view_class_card.xml
+++ b/app/src/main/res/layout/view_class_card.xml
@@ -45,6 +45,15 @@
                 android:layout_marginBottom="10dp"
                 android:textSize="14sp" />
 
+            <ImageView
+
+                android:id="@+id/view_class_color_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/color_indicator" />
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
