Added AMPM support, added primary/accent color settings.

--- a/app/src/main/res/drawable/circular_progress_bar_cyan.xml
+++ b/app/src/main/res/drawable/circular_progress_bar_cyan.xml
@@ -15,8 +15,8 @@
         <gradient
 
             android:angle="0"
-            android:endColor="@color/magenta"
-            android:startColor="@color/magenta"
+            android:endColor="@color/cyan"
+            android:startColor="@color/cyan"
             android:type="sweep"
             android:useLevel="false" />
 
