--- a/app/src/main/res/drawable/circular_progress_bar_purple.xml
+++ b/app/src/main/res/drawable/circular_progress_bar_purple.xml
@@ -15,8 +15,8 @@
         <gradient
 
             android:angle="0"
-            android:endColor="@color/violet"
-            android:startColor="@color/violet"
+            android:endColor="@color/purple"
+            android:startColor="@color/purple"
             android:type="sweep"
             android:useLevel="false" />
 
