--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -23,6 +23,7 @@
 
             <TextView
 
+                android:id="@+id/overview_no_classes_card_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
@@ -89,7 +90,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="0.75dp"
                         android:layout_marginRight="0.75dp"
-                        android:progressTint="@color/primary">
+                        android:progressTint="?attr/colorPrimary">
 
                     </ProgressBar>
 
