--- a/app/src/main/res/xml/preferences_add_class.xml
+++ b/app/src/main/res/xml/preferences_add_class.xml
@@ -7,12 +7,12 @@
 
     <org.xdty.preference.ColorPreference
 
-        android:defaultValue="@color/green"
+        android:defaultValue="@color/teal"
         android:key="add_class_color"
         android:summary="This color will show up on notifications about this class"
         android:title="Choose a color"
         tools:colors="@array/add_class_colors"
-        tools:columns="5"
+        tools:columns="6"
         tools:dialogTitle="Choose a color" />
 
 </PreferenceScreen>
