--- a/app/src/main/res/drawable/circular_progress_bar_deep_orange.xml
+++ b/app/src/main/res/drawable/circular_progress_bar_deep_orange.xml
@@ -15,8 +15,8 @@
         <gradient
 
             android:angle="0"
-            android:endColor="@color/grey"
-            android:startColor="@color/grey"
+            android:endColor="@color/deep_orange"
+            android:startColor="@color/deep_orange"
             android:type="sweep"
             android:useLevel="false" />
 
