--- a/app/src/main/res/layout/view_edit_day_list_child.xml
+++ b/app/src/main/res/layout/view_edit_day_list_child.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:src="@drawable/add"
-        android:tint="@color/add_icon_grey" />
+        android:tint="@color/grey" />
 
     <TextView
 
