--- a/app/src/main/res/layout/view_notification.xml
+++ b/app/src/main/res/layout/view_notification.xml
@@ -243,6 +243,18 @@
             android:progressDrawable="@drawable/circular_progress_bar_blue_grey"
             android:visibility="gone" />
 
+        <ProgressBar
+
+            android:id="@+id/view_notification_progress_bar_black_contrast"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:background="@drawable/circular_progress_bar_background_contrast"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar_black"
+            android:visibility="gone" />
+
         <TextView
 
             android:id="@+id/view_notification_progress_text"
@@ -289,6 +301,17 @@
 
         <TextView
 
+            android:id="@+id/view_notification_header_black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:visibility="gone" />
+
+        <TextView
+
             android:id="@+id/view_notification_header_white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -307,6 +330,18 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="#616161"
+            android:textSize="14sp"
+            android:visibility="gone" />
+
+        <TextView
+
+            android:id="@+id/view_notification_text_black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/view_notification_header_black"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="#000000"
             android:textSize="14sp"
             android:visibility="gone" />
 
